objects/BLN_Template_Child__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Item__c</fullName>
        <label>BLN Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipLabel>BLN_Template_Child</relationshipLabel>
        <relationshipName>BLN_Template_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Template__c</fullName>
        <label>BLN_Template</label>
        <referenceTo>BLN_Template__c</referenceTo>
        <relationshipLabel>BLN_Template_Child</relationshipLabel>
        <relationshipName>BLN_Template_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <label>HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BLN_Template_Child</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLN_Template__c</columns>
        <columns>BLN_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>BLN_Template_Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN_Template_Child</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>